# derailed

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  alembic.ini  docker-compose.yaml  scylla.yml  wsi.proto
.github/workflows/: CI.yml
api/: Cargo.toml  Dockerfile  dev.py  gunicorn.conf.py  mypy.ini  pyproject.toml
api-v1/: Cargo.toml
api-v1/src/: main.rs
api-v1/src/routes/: mod.rs
api-v1/src/routes/user/: login.rs  mod.rs  modify_current_user.rs  register.rs
api/api/: app.py  auth.py  error.py  flags.py  identity.py  models.py  objects.py  scylla.py  utils.py
api/api/controllers/: __init__.py  dbs.py  rate_limiter.py  rpc.py
api/api/eludris/: __init__.py  flags.py  models.py  objects.py  parsers.py
api/api/routers/: guild.py  user.py
api/api/structures/: __init__.py  flags.py  models.py  objects.py  parsers.py
api/src/: brewery.rs  main.rs
api/src/routes/: common_models.rs  mod.rs
api/src/routes/guild/: create.rs  delete.rs  get.rs  get_preview.rs  mod.rs  modify.rs
api/src/routes/invite/: create.rs  delete.rs  join.rs  mod.rs
api/src/routes/relationship/: mod.rs  push.rs
api/src/routes/track/: create.rs  delete.rs  fetch.rs  fetch_user.rs  mod.rs  modify.rs
api/src/routes/user/: get_current_user.rs  get_user.rs  login.rs  mod.rs  modify_current_user.rs  register.rs
api/tests/: base.py  test_users.py  utils.py
app/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
app/public/assets/: LICENSE.md
app/src/: index.css  main.tsx  types.ts  util.tsx
app/src/components/: Login.tsx  Register.tsx
app/src/lib/client/: gateway.ts  http.ts  state.ts
app/src/lib/mark/: index.ts
app/src/pages/: Login.tsx  Register.tsx  WsTest.tsx
brew/: Cargo.toml  build.rs
brew/src/: lib.rs
crates/dbrs/: Cargo.toml
crates/dbrs/src/: auth.rs  conn.rs  errors.rs  flags.rs  identity.rs  lib.rs
gateway/: .env.example  .gitignore  mix.exs
gateway/apps/brew/: .gitignore  mix.exs
gateway/apps/brew/lib/: application.ex  server.ex  service.ex
gateway/apps/brew/test/derailed/: brew_test.exs
gateway/apps/cowconn/: mix.exs
gateway/apps/cowconn/test/derailed/: web_socket_test.exs
gateway/apps/gateway_grpc/: mix.exs
gateway/apps/gateway_grpc/lib/: application.ex  endpoint.ex  server.ex  service.ex
gateway/apps/guilds/: .gitignore  mix.exs
gateway/apps/guilds/lib/: application.ex  guild.ex
gateway/apps/payloads/: .gitignore  mix.exs
gateway/apps/payloads/lib/: base.ex  event_base.ex  hello.ex  ready.ex
gateway/apps/payloads/test/: payloads_test.exs
gateway/apps/presences/: mix.exs
gateway/apps/presences/lib/: presences.ex
gateway/apps/session/lib/: application.ex  shared_session.ex
gateway/apps/sessions/: .gitignore  mix.exs
gateway/apps/sessions/lib/: application.ex  session.ex  unify.ex
gateway/apps/tokenrs/: .gitignore  mix.exs
gateway/apps/tokenrs/lib/: tokenrs.ex
gateway/apps/tokenrs/native/tokenrs/: Cargo.toml
gateway/apps/tokenrs/native/tokenrs/src/: lib.rs
gateway/apps/tokenrs/test/: tokenrs_test.exs
gateway/apps/utils/: mix.exs
gateway/apps/utils/lib/: application.ex  utilites.ex  utils.ex
gateway/apps/utils/test/derailed/: utility_test.exs  utils_test.exs
gateway/apps/websocket/: .gitignore  mix.exs
gateway/apps/websocket/lib/: application.ex  cowboy.ex  state.ex  websocket.ex
gateway/apps/websocket/test/: websocket_test.exs
gateway/config/: runtime.example.exs  runtime.exs
mig25/: README.md  pyproject.toml
mig25/mig25/: __init__.py  __main__.py
migrations/: 20230909115946_initial.down.sql  20230909115946_initial.up.sql  20231007122506_tracks.down.sql  20231007122506_tracks.up.sql  20231009073002_relationships.down.sql  20231009073002_relationships.up.sql  env.py
migrations/versions/: c8ce70d60afe_.py
migs25/: 2023-1691030343-initial.py  mig25.toml
mineral/: Cargo.toml
mineral/src/: auth.rs  conn.rs  errors.rs  flags.rs  identity.rs  lib.rs  models.rs  utils.rs
mineral/src/models/: user.rs
p3/: pyproject.toml
p3/src/api/: __init__.py  app.py  missing.py
p3/src/api/dependency/: get_user.py
p3/src/api/router/: user.py
p3/src/models/: __init__.py  authentication.py  channel.py  error.py  flags.py  guild.py  sf.py  user.py
protos/: thomas.proto
thomas/: Cargo.toml  build.rs
thomas/src/: main.rs
tracks/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
tracks/app/: layout.tsx  page.tsx
tracks/app/login/: page.tsx
tracks/app/register/: page.tsx
tracks/lib/: postgres.ts
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/plugins/tailwind/: variableFontWorkaround.cjs
web/src/: main.tsx
wsi/: Dockerfile  mix.exs
wsi/apps/dgrpc/: mix.exs
wsi/apps/dgrpc/lib/: server.ex  service.ex
wsi/apps/dgrpc/test/derailed/: grpc_test.exs
wsi/apps/guilds/lib/: application.ex  guild.ex
wsi/apps/guilds/test/derailed/: guild_test.exs
wsi/apps/presences/lib/: application.ex  presences.ex
wsi/apps/presences/test/derailed/: presences_test.exs
wsi/apps/session/: mix.exs
wsi/apps/session/lib/: session.ex
wsi/apps/session/test/derailed/: session_test.exs
wsi/apps/utils/: mix.exs
wsi/apps/utils/lib/: lookup.ex  routing.ex  token_config.ex
wsi/apps/uwsi/: mix.exs
wsi/apps/uwsi/lib/: application.ex  connector.ex  websocket.ex
wsi/config/: runtime.exs
