[package]
name = "api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["json", "time", "env-filter"] }
log = "0.4.20"
mineral = { path = "../mineral" }
serde = { version = "1.0.188", features = ["derive"] }
bcrypt = "0.15.0"
dotenvy = "0.15.7"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "time", "macros"] }                