[tool.poetry]
name = "api"
version = "0.0.0"
description = "The Derailed API"
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jwt = "^1.3.1"
python-dotenv = "^1.0.0"
uvloop = {version = "^0.17.0", platform = "linux"}
msgspec = "^0.17.0"
pydantic = "^2.0.1"
email-validator = "^2.0.0.post2"
asyncpg = "^0.28.0"
fastapi = "^0.100.0"
scylla-driver = "^3.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
