[tool.poetry]
name = "api"
version = "0.0.0"
description = "The Derailed API"
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.11"
jwt = "^1.3.1"
python-dotenv = "^1.0.0"
uvloop = {version = "^0.17.0", platform = "linux"}
msgspec = "^0.17.0"
email-validator = "^2.0.0.post2"
asyncpg = "^0.28.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
taskipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
types-redis = "^4.6.0.3"
black = "^23.7.0"
mypy = "^1.5.0"
isort = "^5.12.0"
httpx = "^0.24.1"

[tool.taskipy.tasks]
tests = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
