[package]
name = "brew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }