[package]
name = "mineral"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
num-bigint = "0.4.3"
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
itsdangerous = { version = "0.4.1", features = ["serde", "serde_json"] }
base64 = "0.21.2"
thiserror = "1.0.47"
utoipa = "3.5.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "time", "macros"] }
actix-web = "4.4.0"
serde_json = "1.0.105"
rand = "0.8.5"
time = { version = "0.3", features = ["serde"] }
