[package]
name = "dbrs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
jsonwebtoken = "8.3.0"
num-bigint = "0.4.3"
scylla = "0.9.0"
serde = { version = "1.0.180", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["migrate", "runtime-tokio", "postgres", "macros"] }
time = "0.3.23"
tokio = { version = "1.29.1", features = ["full"] }
